--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.1
+  get_it: ^7.0.0
+  http: ^1.2.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -20,5 +23,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets/images/img_product.jpg
 
 
