--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.1
+  bloc: ^8.1.0
   get_it: ^7.0.0
   http: ^1.2.1
   cached_network_image: ^3.2.3
