--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_it: ^7.0.0
   http: ^1.2.1
   cached_network_image: ^3.2.3
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
